--- a/html5/file.html
+++ b/html5/file.html
@@ -8,15 +8,27 @@
 
 $(function(){
 	get_file_size();
+	get_file_content();
 });
 
 function get_file_size(){
 	$("#mytest").change(function(){
-		var files_count = $(this)[0].files.length;
-		if(files_count > 0){
+		if($(this)[0].files.length > 0){
 			var size = $(this)[0].files[0].size;
-			console.log(size);
 			$("#filesize").html(size);
+		}
+	});
+}
+
+function get_file_content(){
+	$("#mytest").change(function(){
+		if($(this)[0].files.length > 0){
+			var file = $(this)[0].files[0];
+			var reader = new FileReader();
+			reader.readAsDataURL(file);
+			reader.onload = function(e){
+				$("body").append('<img src="' + e.currentTarget.result + '"/>');
+			}
 		}
 	});
 }
