--- a/html5/ab.html
+++ b/html5/ab.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+<title>ab</title>
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
